# Blueplate

./: LICENSE  README.md  meson.build
src/: app.cpp  app.h  configuration.cpp  configuration.h  key_inserter.cpp  key_inserter.h  project_creator.cpp  project_creator.h  ui.cpp  ui.h
subprojects/: ftxui.wrap  tomlplusplus.wrap
templates/meson-cpp-20/: meson.build
templates/meson-cpp-20/src/: ${pc_project_name}.cpp  ${pc_project_name}.h
